GITWEB_ROOT for .cgi

--- a/Makefile.smallinstall
+++ b/Makefile.smallinstall
@@ -319,7 +319,7 @@ apacheconf:
 mwiki: public-repos apacheconf
 	mkdir -p $(CGILIB)
 	chown -R $(MWUSER):$(MWUSER) $(MWUSER_HOME)
-	sed -e "s|@@MWUSER@@|$(MWUSER)|g; s|@@MW_BTRFS@@|$(MW_BTRFS)|g; s|@@REPO_NAME@@|$(REPO_NAME)|g;" < mwiki.cgi > $(CGILIB)/mwiki.cgi
+	sed -e "s|@@MWUSER@@|$(MWUSER)|g; s|@@MW_BTRFS@@|$(MW_BTRFS)|g; s|@@REPO_NAME@@|$(REPO_NAME)|g; s|@@GITWEB_ROOT@@|$(GITWEB_ROOT)|g;" < mwiki.cgi > $(CGILIB)/mwiki.cgi
 	chown -R $(MWUSER):$(MWUSER) $(CGILIB)/mwiki.cgi
 	chmod 755 $(CGILIB)/mwiki.cgi
 	cd $(APACHE_ROOT)/etc/apache2/sites-enabled \
