installed mw_common

--- a/Makefile.smallinstall
+++ b/Makefile.smallinstall
@@ -61,7 +61,7 @@ SHEETS=addabsrefs miz evl2dep evl2dep1
 CSS=article index
 JAVASCRIPT=article
 PERLSCRIPTS=mkxmlhead mkmmlindex duplicates duplicates1 MizItemize
-PERLMODULES=mizar
+PERLMODULES=mizar mw_common
 GITWEB_ROOT=/var/cache/git
 NUM_ARTICLES=10
 HEAD=/usr/bin/head
