--- a/Makefile.smallinstall
+++ b/Makefile.smallinstall
@@ -147,7 +147,6 @@ gitolite-setup:
 	  cp $$hookfile $(MWADMIN_DIR); \
 	done
 	cp subv_del.c $(GITOLITE_BIN_DIR)
-	cd $(GITOLITE_BIN_DIR) && gcc subv_del.c -o subv_del && chown root:root subv_del && chmod 4755 subv_del
 	chown -R $(MWUSER):$(MWUSER) $(MWADMIN_DIR)
 
 repos: public-repos gitweb mwiki
@@ -157,6 +156,7 @@ endif
 
 public-repos: public-repo-init public-sandbox public-repo-export
 	chown -R $(MWUSER):$(MWUSER) $(MWUSER_HOME)
+
 
 scratch-directories: gitolite-setup
 	mkdir -p $(SCRATCH_BASE)
@@ -216,6 +216,7 @@ scratch: scratch-html
 
 public-repo-init: public-mwiki-user scratch
 ifeq ($(MW_BTRFS),1)
+	mkdir -p $(REPOS_BASE)	
 	btrfs subvolume create  $(PUBLIC_REPO)
 else
 	mkdir -p $(PUBLIC_REPO)
@@ -332,6 +333,7 @@ mwiki: public-repos apacheconf
 	chmod 644 $(CGILIB)/mw_common.pm
 	chown -R $(MWUSER):$(MWUSER) $(CGILIB)/mwiki.cgi
 	chmod 755 $(CGILIB)/mwiki.cgi
+	cd $(GITOLITE_BIN_DIR) && gcc subv_del.c -o subv_del && chown root:root subv_del && chmod 4755 subv_del
 	cd $(APACHE_ROOT)/etc/apache2/sites-enabled \
 	  && ln -f -s ../sites-available/$(REPO_NAME) $(REPO_NAME)
 	#chown -R $(MWUSER):$(MWUSER) /home/$(MWUSER)
