--- a/Makefile.smallinstall
+++ b/Makefile.smallinstall
@@ -41,6 +41,8 @@
 #
 # - HEAD: default /usr/bin/head.  See description of INSTALL variable.
 
+# adding a new user: adduser tstmw; ssh tstmw@localhost; ssh-keygen
+
 
 MWUSER_HOME=/home/$(MWUSER)
 SCRATCH_BASE=$(MWUSER_HOME)/scratch
