--- a/Makefile.smallinstall
+++ b/Makefile.smallinstall
@@ -137,7 +137,7 @@ gitolite-setup:
 	sudo -u $(MWUSER) sh -c 'export HOME=$(MWUSER_HOME) && export PATH=$$PATH:$$HOME/bin && gl-setup  -q /tmp/$(MWUSER).pub'
 	# change the default umask to 0022 so that the repos are gitweb-visible
 	grep -q '$$REPO_UMASK = 0077;' $(MWUSER_HOME)/.gitolite.rc && \
-	  sed -ie 's/$$REPO_UMASK = 0077;/$$REPO_UMASK = 0022;' $(MWUSER_HOME)/.gitolite.rc
+	  sed -ie 's/$$REPO_UMASK = 0077;/$$REPO_UMASK = 0022;/g' $(MWUSER_HOME)/.gitolite.rc
 	rm /tmp/$(MWUSER).pub
 	chown -R $(MWUSER):$(MWUSER) $(REPOS_BASE)
 	sudo -u $(MWUSER) git clone $(MWUSER)@localhost:gitolite-admin $(GITOLITE_ADMIN_DIR)
