--- a/Makefile.smallinstall
+++ b/Makefile.smallinstall
@@ -150,7 +150,8 @@ gitolite-setup:
 	chmod 755 $(MWUSER_HOME)/repositories
 	# testing and public repos
 	sed -e "s|@@MWUSER@@|$(MWUSER)|g" < gitolite-config > $(GITOLITE_ADMIN_DIR)/conf/gitolite.conf
-	cd $(GITOLITE_ADMIN_DIR) && sudo -u $(MWUSER) sh -c 'export HOME=$(MWUSER_HOME) && export PATH=$$PATH:$$HOME/bin && git add  conf/users.conf && git commit -a -m "Include users.conf in the config file and register the mwiki with gitolite." && git push'
+	# ##TODO:  the git config commands should be unnecessary if the home is known to cgi
+	cd $(GITOLITE_ADMIN_DIR) && sudo -u $(MWUSER) sh -c 'export HOME=$(MWUSER_HOME) && export PATH=$$PATH:$$HOME/bin && git add  conf/users.conf && git commit -a -m "Include users.conf in the config file and register the mwiki with gitolite." && git push && git config  user.name $(MWUSER) && git config user.email $(MWUSER)@none.none '
 	# suexec config - TODO: this is probably unnnecessary now - test
 	chown -R $(MWUSER):$(MWUSER) /home/$(MWUSER)
 	perl -e 'open(A,$$ARGV[0]); while(<A>) { s/##MWUSER##/$$ARGV[1]/g; print }' \
