GITPROJECT=MWTMPL_GIT_PROJECT

--- a/mwbase/Makefile
+++ b/mwbase/Makefile
@@ -12,7 +12,9 @@ VPATH = mml
 export SHELL=/bin/bash
 ECHO = /bin/echo
 WIKIHOST=mws.cs.ru.nl
-GITPROJECT=mw1.git
+# This is now by default a template, but changing it to actual project should work
+GITPROJECT=MWTMPL_GIT_PROJECT
+# GITPROJECT=mw1.git
 MWIKICGI=http://$(WIKIHOST)/bin/@@REPO_NAME@@/mwiki.cgi
 
 # .PHONY is a bad bad thing, it remakes the target all over; don't use this
