--- a/Makefile.smallinstall
+++ b/Makefile.smallinstall
@@ -101,6 +101,9 @@ CGILIB=/var/www/bin/$(REPO_NAME)
 
 #CGILIB=$(MWUSER_HOME)/public_html/cgi-bin
 
+# the public http path to the cgi lib
+CGI_HTTP_PATH=http://$(WIKIHOST)/bin/$(REPO_NAME)
+
 # this is the gitolite-aware frontend for the PUBLIC_REPO
 BARE_PUBLIC_REPO_SSH=$(MWUSER)@$(WIKIHOST):public
 
@@ -123,6 +126,7 @@ init-mwiki-user:
 	ssh $(MWUSER)@localhost ssh-keygen -q 
 	sudo -i -u $(MWUSER) sh -c 'git config --global user.email "$(MWUSER)@none.none" && git config --global user.name "$(MWUSER)"'
 	# mkdir $(BTRFS)/tstmw && chown tstmw:tstmw $(BTRFS)/tstmw && ln -s /mnt/btr1/tstmw clones
+
 
 # gitolite
 
@@ -219,7 +223,7 @@ scratch-deps: scratch-mizfiles
 
 # GITPROJECT used to be public.git here, now MWTMPL_GIT_PROJECT
 scratch-html: scratch-deps
-	@$(MAKE) -C $(SCRATCH_BASE) -j $(MAKEJOBS) xmlvrfs prels absrefs htmls MIZFILES=$(SCRATCH_BASE) PATH=$(SCRATCH_BASE)/bin:$(PATH) WIKIHOST=$(WIKIHOST) GITPROJECT=MWTMPL_GIT_PROJECT MWIKICGI=http://$(WIKIHOST)/bin/$(REPO_NAME)/mwiki.cgi
+	@$(MAKE) -C $(SCRATCH_BASE) -j $(MAKEJOBS) xmlvrfs prels absrefs htmls MIZFILES=$(SCRATCH_BASE) PATH=$(SCRATCH_BASE)/bin:$(PATH) WIKIHOST=$(WIKIHOST) GITPROJECT=MWTMPL_GIT_PROJECT MWIKICGI=$(CGI_HTTP_PATH)/mwiki.cgi
 
 scratch: scratch-html
 
@@ -328,7 +332,7 @@ apacheconf:
 mwiki: public-repos apacheconf
 	mkdir -p $(CGILIB)
 	chown -R $(MWUSER):$(MWUSER) $(MWUSER_HOME)
-	sed -e "s|@@MWUSER@@|$(MWUSER)|g; s|@@MW_BTRFS@@|$(MW_BTRFS)|g; s|@@REPO_NAME@@|$(REPO_NAME)|g; s|@@GITWEB_ROOT@@|$(GITWEB_ROOT)|g;" < mwbase/.perl/mw_common.pm > $(CGILIB)/mw_common.pm
+	sed -e "s|@@MWUSER@@|$(MWUSER)|g; s|@@MW_BTRFS@@|$(MW_BTRFS)|g; s|@@REPO_NAME@@|$(REPO_NAME)|g; s|@@GITWEB_ROOT@@|$(GITWEB_ROOT)|g; s|@@CGI_HTTP_PATH@@|$(CGI_HTTP_PATH)|g;" < mwbase/.perl/mw_common.pm > $(CGILIB)/mw_common.pm
 	cp mwiki.cgi $(CGILIB)/mwiki.cgi
 	chown -R $(MWUSER):$(MWUSER) $(CGILIB)/mw_common.pm 
 	chmod 644 $(CGILIB)/mw_common.pm
