--- a/apacheconf-mizar.in
+++ b/apacheconf-mizar.in
@@ -4,12 +4,12 @@ AliasMatch ^/##REPO_NAME##/(.*) "##REPOS_BASE##/$1"
   Options Indexes FollowSymLinks MultiViews
 RewriteEngine On
   # when in doubt, use the public clone
-    RewriteRule  ^/home/tstmw/clones[\/]?$ /var/www/bin/##REPO_NAME##/mwiki.cgi?p=public.git;a=index [PT,L,QSA]
+    RewriteRule  ^##REPOS_BASE##[\/]?$ /var/www/bin/##REPO_NAME##/mwiki.cgi?p=public.git;a=index [PT,L,QSA]
   # wiki index
-    RewriteRule  ^/home/tstmw/clones/([^\/]*)[\/]?$ /var/www/bin/##REPO_NAME##/mwiki.cgi?p=$1.git;a=index [PT,L,QSA]
-    RewriteRule  ^/home/tstmw/clones/([^\/]*)[\/]00INDEX(.html)?$ /var/www/bin/##REPO_NAME##/mwiki.cgi?p=$1.git;a=index [PT,L,QSA]
+    RewriteRule  ^##REPOS_BASE##/([^\/]*)[\/]?$ /var/www/bin/##REPO_NAME##/mwiki.cgi?p=$1.git;a=index [PT,L,QSA]
+    RewriteRule  ^##REPOS_BASE##/([^\/]*)[\/]00INDEX(.html)?$ /var/www/bin/##REPO_NAME##/mwiki.cgi?p=$1.git;a=index [PT,L,QSA]
   # anything under /wiki is treated as an article title
-    RewriteRule  ^/home/tstmw/clones/([^\/]*)([\/].*).html$ /var/www/bin/##REPO_NAME##/mwiki.cgi?p=$1.git;a=view;f=mml$2.miz [PT,L,QSA]
+    RewriteRule  ^##REPOS_BASE##/([^\/]*)([\/].*).html$ /var/www/bin/##REPO_NAME##/mwiki.cgi?p=$1.git;a=view;f=mml$2.miz [PT,L,QSA]
   DirectoryIndex 00INDEX.html
   AllowOverride None
   Order allow,deny
